# Ranking-estudos

ranking-estudos-backend/: .gitignore  Cargo.toml
ranking-estudos-backend/src/: db.rs  main.rs  models.rs
ranking-estudos-backend/src/routes/: activities.rs  groups.rs  health.rs  mod.rs  users.rs
ranking-estudos-frontend/: index.html  package-lock.json  package.json
ranking-estudos-frontend/src/: app.tsx  main.tsx
ranking-estudos-frontend/src/api/: client.ts  types.ts
ranking-estudos-frontend/src/components/: Navbar.tsx
ranking-estudos-frontend/src/context/: UserContext.tsx
ranking-estudos-frontend/src/pages/: GroupDetailPage.tsx  GroupsPage.tsx  LoginPage.tsx
